[gd_scene load_steps=13 format=2]

[ext_resource path="res://GameDVDCardtridge/404/404.gd" type="Script" id=1]
[ext_resource path="res://fonts/Built/Ubuntu_B_48tred.tres" type="FontFile" id=2]
[ext_resource path="res://fonts/Built/Ubuntu_R_48tred.tres" type="FontFile" id=3]
[ext_resource path="res://fonts/Built/Ubuntu_monospace_48tred.tres" type="FontFile" id=4]
[ext_resource path="res://fonts/Built/Ubuntu_BI_48tred.tres" type="FontFile" id=5]
[ext_resource path="res://fonts/Built/Ubuntu_RI_48tred.tres" type="FontFile" id=6]
[ext_resource path="res://fonts/Built/Ubuntu_B_72.tres" type="FontFile" id=7]
[ext_resource path="res://Audio/Musik/Floaters.wav" type="AudioStream" id=9]
[ext_resource path="res://GameDVDCardtridge/404/uiPart/Menu404.tscn" type="PackedScene" id=10]
[ext_resource path="res://font/ubuntu-font-family-0.83/Ubuntu-B.ttf" type="FontFile" id=11]
[ext_resource path="res://Theme/Perkedel_Tema.tres" type="Theme" id=12]

[sub_resource type="FontFile" id=1]
resource_local_to_scene = true
resource_name = "Ubuntu Bold 48"
size = 48
outline_size = 1
outline_color = Color( 0.168627, 0, 0, 1 )
font_data = ExtResource( 11 )

[node name="404" type="Node"]
script = ExtResource( 1 )

[node name="404ui" type="CanvasLayer" parent="."]

[node name="Control404" type="Control" parent="404ui"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
theme = ExtResource( 12 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="404Contains" type="VBoxContainer" parent="404ui/Control404"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel404" type="Panel" parent="404ui/Control404/404Contains"]
self_modulate = Color( 1, 1, 1, 0.301961 )
offset_right = 1920.0
offset_bottom = 100.0
custom_minimum_size = Vector2( 0, 100 )

[node name="LEDscrolling" type="ScrollContainer" parent="404ui/Control404/404Contains/Panel404"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_minimum_size = Vector2( 0, 100 )
clip_contents = false
scroll_vertical_enabled = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="404ui/Control404/404Contains/Panel404/LEDscrolling"]
offset_right = 1920.0
offset_bottom = 100.0
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 1

[node name="Label" type="Label" parent="404ui/Control404/404Contains/Panel404/LEDscrolling/HBoxContainer"]
offset_right = 1920.0
offset_bottom = 100.0
size_flags_horizontal = 3
size_flags_vertical = 7
theme_override_fonts/font = ExtResource( 7 )
text = "WERROR 404 NOT FOUND"
align = 1
valign = 1

[node name="UpTween" type="Tween" parent="404ui/Control404/404Contains/Panel404"]

[node name="404Space" type="CenterContainer" parent="404ui/Control404/404Contains"]
offset_top = 104.0
offset_right = 1920.0
offset_bottom = 538.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="DebugMessage" type="HBoxContainer" parent="404ui/Control404/404Contains"]
offset_top = 542.0
offset_right = 1920.0
offset_bottom = 976.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="RichTextLabel" type="RichTextLabel" parent="404ui/Control404/404Contains/DebugMessage"]
offset_right = 1920.0
offset_bottom = 434.0
focus_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_fonts/mono_font = ExtResource( 4 )
theme_override_fonts/bold_italics_font = ExtResource( 5 )
theme_override_fonts/italics_font = ExtResource( 6 )
theme_override_fonts/bold_font = ExtResource( 2 )
theme_override_fonts/normal_font = ExtResource( 3 )
bbcode_enabled = true
text = "wwaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa
ww
w
w
w
w
w
w
w
w
Your [b]error[/b] [i]message[/i] [rainbow]here[/rainbow]"
text = "wwaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa
ww
w
w
w
w
w
w
w
w
Your error message here"
scroll_following = true
selection_enabled = true

[node name="MessTween" type="Tween" parent="404ui/Control404/404Contains/DebugMessage"]

[node name="Menu404" parent="404ui/Control404/404Contains" instance=ExtResource( 10 )]

[node name="ChangeDVDButton" parent="404ui/Control404/404Contains/Menu404" index="0"]
theme_override_fonts/font = SubResource( 1 )

[node name="ExitGameButton" parent="404ui/Control404/404Contains/Menu404" index="1"]
theme_override_fonts/font = SubResource( 1 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 9 )

[node name="VideoCanvas" type="CanvasLayer" parent="."]
layer = -2

[node name="VideoStreamPlayer" type="VideoStreamPlayer" parent="VideoCanvas"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 12 )
volume_db = -80.0
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="404ui/Control404/404Contains/Menu404/ChangeDVDButton" to="." method="_on_ChangeDVDButton_pressed"]
[connection signal="pressed" from="404ui/Control404/404Contains/Menu404/ExitGameButton" to="." method="_on_ExitGameButton_pressed"]
[connection signal="finished" from="AudioStreamPlayer" to="." method="_on_AudioStreamPlayer_finished"]
[connection signal="finished" from="VideoCanvas/VideoStreamPlayer" to="." method="_on_VideoPlayer_finished"]

[editable path="404ui/Control404/404Contains/Menu404"]
